# Wahba-Problem

./: CMakeLists.txt  README.md
cmake/: boost.cmake
include/: solutions.h  utils.h
node/: bun_test.cpp  procrustes_sol.cpp  shuster_solution.cpp  triad.cpp
